crates/ink/tests/ui/abi/sol/fail/message-sol-name-invalid.stderr
error: Solidity identifiers must begin with an alphabetic character, dollar sign or underscore
  --> tests/ui/abi/sol/fail/message-sol-name-invalid.rs:14:35
   |
14 |         #[ink(message, sol_name = "1myMessage")]
   |                                   ^^^^^^^^^^^^
